# BitSwiss

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
src/: DownloadManager.cpp  DownloadManager.hpp  PackageManager.hpp  StorageManager.hpp  StorageManager_Linux.cpp  StorageManager_Mac.cpp  StorageManager_Windows.cpp  StorageWriter.cpp  StorageWriter.hpp  ThemeManager.hpp  main.cpp
